# Proxmox2Netbox

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  FASTAPI.md  MANIFEST.in  PAST_CONFIG.md  README.md  TODO.md  index.html  mkdocs.yml  objects.inv  psaux.txt  pyproject.toml  reinstall.sh  requirements-new.txt  requirements.txt  setup.py  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  sync_regression.yml
.github/workflows/: ci.yml  docs.yml  publish-python-package.yml  pypi.yml  release.yml
configuration/: index.html
configuration/required-parameters/: index.html
contrib/: proxbox-https.service  proxmox2netbox-https.service  proxmox2netbox.service
docs/: CNAME  index.md  roadmap.md
docs/backend/: index.md  using-pip.md
docs/configuration/: index.md  required-parameters.md
docs/features/: api-integration.md  background-jobs.md  backup.md  containers.md  monitoring.md  network.md  storage.md  synchronized-data.md  virtual-machine.md  vlan-management.md
docs/installation/: 1-installing-plugin.md  2-installing-plugin-git.md  3-installing-plugin-docker.md  backend-setup.md  index.md  pre-installation.md  upgrading.md
docs/models/: containers.md  others.md  virtual-machine.md
docs/release-notes/: index.md
features/api-integration/: index.html
features/background-jobs/: index.html
features/backup/: index.html
features/containers/: index.html
features/monitoring/: index.html
features/network/: index.html
features/storage/: index.html
features/synchronized-data/: index.html
features/virtual-machine/: index.html
features/vlan-management/: index.html
installation/: index.html
installation/1-installing-plugin/: index.html
installation/2-installing-plugin-git/: index.html
installation/3-installing-plugin-docker/: index.html
installation/pre-installation/: index.html
installation/upgrading/: index.html
models/containers/: index.html
models/others/: index.html
models/virtual-machine/: index.html
netbox_proxbox/: __init__.py  choices.py  fields.py  filtersets.py  github.py  jobs.py  models.py  navigation.py  proxmox_sync.py  tables.py  urls.py  utils.py  websocket_client.py
netbox_proxbox/api/: filters.py  serializers.py  urls.py  views.py
netbox_proxbox/forms/: __init__.py  fastapi.py  netbox.py  proxmox.py  sync_process.py  vm_backup.py
netbox_proxbox/migrations/: 0008_fastapiendpoint_domain_and_more.py  0008_fastapiendpoint_domain_netboxendpoint_domain_and_more.py  0009_alter_fastapiendpoint_domain.py  0009_syncprocess.py  0009_vmbackup.py  0010_alter_proxmoxendpoint_auth_fields.py  0010_alter_vmbackup_options.py  0010_syncprocess_runtime.py  0011_alter_fastapiendpoint_name.py  0011_fastapiendpoint_server_side_websocket_and_more.py  0011_vmbackup_storage_alter_vmbackup_unique_together.py  0012_alter_netboxendpoint_token.py  0012_alter_vmbackup_options_and_more.py  0012_cleanup_legacy_managed_tags.py  0013_proxmoxendpoint_domain_and_more.py  0014_alter_proxmoxendpoint_verify_ssl.py  0015_alter_proxmoxendpoint_unique_together.py
netbox_proxbox/models/: __init__.py  vm_backup.py
netbox_proxbox/services/: __init__.py  proxmox_sync.py
netbox_proxbox/tables/: __init__.py  vm_backup.py
netbox_proxbox/views/: __init__.py  cards.py  external_pages.py  keepalive_status.py  proxbox_backend.py  sync.py  sync_process.py  vm_backup.py
proxbox_api/: Dockerfile  README.md  __init__.py  main.py  pyproject.toml
proxbox_api/proxbox_api/: main.py  nginx.conf
proxmox2netbox/: __init__.py  filtersets.py  github.py  jobs.py  navigation.py  proxmox_sync.py  urls.py
proxmox2netbox/api/: __init__.py  filters.py  serializers.py  urls.py  views.py
proxmox2netbox/forms/: __init__.py  proxmox.py  sync_process.py
proxmox2netbox/migrations/: 0002_vmresources_description.py  0003_auto_20210419_2330.py  0004_fastapiendpoint_netboxendpoint_proxmoxendpoint_and_more.py  0005_alter_proxmoxendpoint_name.py  0006_alter_fastapiendpoint_name_alter_netboxendpoint_name.py  0007_alter_fastapiendpoint_name.py  0008_alter_proxmoxendpoint_unique_together_and_more.py  0009_vmbackup.py  0010_alter_proxmoxendpoint_auth_fields.py  0011_alter_fastapiendpoint_name.py  0012_cleanup_legacy_managed_tags.py  0013_proxmoxendpoint_site_vrf.py  0014_proxmoxendpoint_device_type.py  0015_proxmox_node_type_mapping.py  0016_proxmoxnodetypemapping_fix.py  0017_proxmoxendpoint_verify_ssl_default_true.py  0018_add_custom_name_to_node_mapping.py  0019_proxmoxendpoint_last_sync_fields.py  0020_endpoint_sync_controls.py
proxmox2netbox/models/: __init__.py  vm_backup.py
proxmox2netbox/services/: __init__.py  _parse.py  proxmox_sync.py
proxmox2netbox/tables/: __init__.py
proxmox2netbox/views/: __init__.py  cards.py  keepalive_status.py  node_type_mapping.py  sync.py  sync_process.py
release-notes/: index.html
release-notes/version-0.0.1/: index.html
release-notes/version-0.0.2/: index.html
release-notes/version-0.0.3/: index.html
release-notes/version-0.0.4/: index.html
roadmap/: index.html
search/: search_index.json
tests/: conftest.py  test_ip_sync.py  test_parse.py
wiki/: Configuration.md  Home.md  Installation.md  Release-and-PyPI.md  Sync-Behavior.md  Troubleshooting.md  _Sidebar.md
(+57 files in other folders)
