[project]
name = "proxmox2netbox"
version = "1.1.0"
description = "Netbox Plugin - Integrate Proxmox and Netbox"
readme = "README.md"
authors = [
    {name = "Patrick Wulff Lind", email = "mail@patricklind.dk"}
]
license = "Apache-2.0"
requires-python = ">=3.8"
dependencies = [
    "proxmoxer>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "bandit>=1.7.0",
    "black>=24.3",
    "invoke>=1.5.0",
    "pylint>=2.7.4",
    "pylint-django>=2.4.3",
    "pydocstyle>=6.0.0",
    "yamllint>=1.26.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    "/.git",
    "/.github",
    "/.venv*",
    "/.ruff_cache",
    "/dist",
    "/build",
    "/__pycache__",
    "**/__pycache__",
    "**/*.py[cod]",
    "**/.DS_Store",
]

[tool.hatch.build.targets.sdist]
include = [
    "/netbox_proxbox",
    "/proxmox2netbox",
    "/README.md",
    "/CONTRIBUTING.md",
    "/LICENSE",
    "/MANIFEST.in",
    "/pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["netbox_proxbox", "proxmox2netbox"]
