[project]
name = "proxmox2netbox"
version = "1.3.0"
description = "NetBox plugin for synchronizing Proxmox inventory data"
readme = "README.md"
authors = [
    {name = "Patrick Wulff Lind", email = "mail@patricklind.dk"}
]
license = "Apache-2.0"
requires-python = ">=3.11"
keywords = ["netbox", "proxmox", "plugin", "dcim", "virtualization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 5",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "proxmoxer>=2.2.0",
]

[project.urls]
Homepage = "https://github.com/patricklind/Proxmox2Netbox"
Documentation = "https://github.com/patricklind/Proxmox2Netbox/wiki"
Repository = "https://github.com/patricklind/Proxmox2Netbox"
Issues = "https://github.com/patricklind/Proxmox2Netbox/issues"
Changelog = "https://github.com/patricklind/Proxmox2Netbox/releases"

[project.optional-dependencies]
dev = [
    "bandit>=1.7.0",
    "build>=1.0.0",
    "ruff>=0.4.0",
    "twine>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    "/.git",
    "/.github",
    "/.venv*",
    "/.ruff_cache",
    "/dist",
    "/build",
    "/__pycache__",
    "**/__pycache__",
    "**/*.py[cod]",
    "**/.DS_Store",
]

[tool.hatch.build.targets.sdist]
include = [
    "/proxmox2netbox",
    "/README.md",
    "/CONTRIBUTING.md",
    "/LICENSE",
    "/MANIFEST.in",
    "/pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["proxmox2netbox"]
